--- a/package/sendToDesktop.desktop
+++ b/package/sendToDesktop.desktop
@@ -12,18 +12,21 @@ MimeType=all/all;
 X-KDE-StartupNotify=false
 Actions=sendDesktop;LinkHere
 X-KDE-Submenu=Send To...
+X-KDE-Submenu[de]=Senden an...
 X-KDE-Submenu[it]=Invia a...
 InitialPreference=99
 Version=5.21
 
 [Desktop Action sendDesktop]
 Name=Send to Desktop (ln -s)
+Name[de]=An Desktop senden (ln -s)
 Name[it]=Invia Alla Scrivania (ln -s)
 Exec=/bin/bash -c "ln -s %F $(grep DESKTOP ~/.config/user-dirs.dirs | cut -d'"' -f2)"
 Icon=desktop
 
 [Desktop Action LinkHere]
 Name=Create Link Here (ln -s)
+Name[de]=Verknüpfung hier erstellen (ln -s)
 Name[it]=Crea Collegamento Qui (ln -s)
 Exec=/bin/bash -c "ln -s %F ./$(basename "%F" )-link"
 Icon=desktop
